apps/observability/phoenix/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phoenix
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames: ["phoenix.darkflame.dev"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: phoenix-svc
          port: 6006
      matches:
        - path:
            type: PathPrefix
            value: /
